[package]
name = "dwt_systick_clock"
version = "0.1.0"
authors = ["Emil Fresk <emil.fresk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typenum = "1"
cortex-m = "0.7"
rtic-monotonic = { git = "https://github.com/rtic-rs/rtic-monotonic", branch = "master" }
